# sastaspace

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .gitignore  .rubocop.yml  .trivyignore  AGENTS.md  AI_SLOP_AUDIT_RESULTS.md  ARCHITECTURE.md  AUTOSCALING.md  BRUTALIST_VICTORY_SCREEN_PROMPT.md  CLAUDE.md  CNAME  Cargo.toml  DASHBOARD_TODO.md  DELIVERABLES_CHECKLIST.md  DESIGN_PLAN.md  DOCKER_SETUP.md  Dockerfile  FINAL_STATUS.md  FRONTEND_ISSUES_FIXED.md  FRONTEND_TEST_FIXES.md  Gemfile  HOOK_ERROR_FIX.md  IMPLEMENTATION_SUMMARY.md  LANDING_PAGE_FILES.txt  LANDING_PAGE_IMPLEMENTATION.md  LANDING_PAGE_QUICK_START.md  LANDING_PAGE_SUCCESS.txt  LICENSE  MISSING_EVENTS_IMPLEMENTATION.md  Makefile  PHASE3_TESTING.md  PLAN_DASHBOARD.md  PLAN_REFACTOR.md  PR_DESCRIPTION.md  Procfile.dev  README.md  README_TESTING.md  (+18 more)
backend/: Dockerfile  Dockerfile.prod  Dockerfile.temp  coverage.xml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  sastaspace-backend.service  test_utils.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  db_repo.py  logging_config.py  redis.py
backend/app/db/: session.py
backend/app/modules/common/: __init__.py
backend/app/modules/sastadice/: __init__.py  models.py  repository.py  router.py  schemas.py  websocket.py
backend/app/modules/sastahero/: constants.py  router.py  schemas.py  services.py
backend/app/modules/sudoku/: __init__.py  genetic.py  models.py  ocr_utils.py  repository.py  router.py  schemas.py  services.py
backend/app/utils/: metrics.py
backend/app/worker/: base.py  ga_helpers.py  mutation_worker.py  solver_coordinator.py
backend/apps/portfolio/: apps.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/portfolio/migrations/: 0001_initial.py
backend/apps/profiles/: ai_service.py  factories.py  models.py  tests.py  urls.py  views.py
backend/apps/profiles/migrations/: 0001_initial.py
backend/apps/users/: factories.py  models.py  serializers.py  test_edge_cases.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/data/: .gitkeep
backend/data/snapshots/: README.md
backend/sastaspace_project/: settings.py  urls.py  wsgi.py
backend/scripts/: duckdb-cli.sh  generate_game_logs.py  simulate_games.py  test_auction_mechanics.py  test_settings_persistence.py  test_upgrade_mechanics.py
backend/tests/: conftest.py  test_common_endpoints.py  test_db_repo.py  test_db_session.py  test_logging_config.py  test_main.py  test_metrics.py  test_redis_coverage.py  test_sastahero.py  test_worker.py
backend/tests/modules/: __init__.py
backend/tests/modules/sastadice/: __init__.py  test_action_dispatcher.py  test_api.py  test_auction_manager.py  test_board_generation.py  test_buffs_and_afk.py  test_coverage_boost.py  test_coverage_gaps.py  test_cpu_dry_run.py  test_cpu_turns.py  test_economy_coverage.py  test_event_manager.py  test_events_data.py  test_game_service.py  test_jail_manager.py  test_new_features_integration.py  test_node_manager.py  test_p0_fixes.py  test_property_based.py  test_property_upgrades.py  test_simulation_manager.py  test_simulation_snapshot_coverage.py  test_skip_buy_fix.py  test_trade_manager.py  test_turn_coordinator.py  test_turn_manager.py  test_ugc_24_board.py  test_websocket.py
backend/tests/modules/sudoku/: __init__.py  test_api.py  test_genetic.py  test_ocr_utils.py
crates/app-admin/: Cargo.toml
crates/app-admin/src/: lib.rs  state.rs  tests.rs  view.rs
crates/app-admin/src/snapshots/: app_admin__tests__snapshot__device_flow_idle.snap  app_admin__tests__snapshot__device_flow_pending.snap  app_admin__tests__snapshot__log_popover.snap  app_admin__tests__snapshot__metrics_panel.snap  app_admin__tests__snapshot__moderation_queue.snap
crates/app-deck/: Cargo.toml
crates/app-deck/src/: audio.rs  download.rs  lib.rs  state.rs  view.rs
crates/app-deck/tests/: snapshot.rs
crates/app-deck/tests/snapshots/: snapshot__generate_downloaded.snap  snapshot__generate_idle.snap  snapshot__plan_done.snap  snapshot__plan_failed.snap  snapshot__plan_idle.snap  snapshot__plan_pending.snap
crates/app-portfolio/: Cargo.toml
crates/app-portfolio/src/: lib.rs  state.rs  view.rs
crates/app-portfolio/tests/: snapshot.rs
crates/app-portfolio/tests/snapshots/: snapshot__empty.snap  snapshot__selected_notes.snap  snapshot__with_projects.snap
crates/app-typewars/: Cargo.toml
crates/app-typewars/src/: lib.rs  state.rs  view.rs
crates/app-typewars/tests/: snapshot.rs
crates/app-typewars/tests/snapshots/: snapshot__battle_loading.snap  snapshot__battle_with_words.snap  snapshot__leaderboard.snap  snapshot__legion_select_cursor_wardens.snap  (+6 more)
crates/auth/: Cargo.toml
crates/auth/src/: google_device.rs  keychain.rs  lib.rs  magic_link.rs
crates/auth/tests/: google_device_mock.rs  keychain_smoke.rs  magic_link_mock.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  config.rs  event.rs  keymap.rs  lib.rs  theme.rs
crates/core/tests/: config_roundtrip.rs
crates/shell/: Cargo.toml
crates/shell/src/: login.rs  main.rs  router.rs  terminal.rs
crates/stdb-client/: Cargo.toml  build_bindings.sh
crates/stdb-client/src/: connection.rs  lib.rs
infra/agents/auth/: Dockerfile  pyproject.toml
infra/agents/moderator/: .coverage  Dockerfile  README.md  pyproject.toml
modules/sastaspace/: .gitignore  Cargo.toml
modules/sastaspace/src/: lib.rs
modules/typewars/: Cargo.toml
modules/typewars/src/: legion.rs  lib.rs  player.rs  region.rs  session.rs  war.rs  word.rs
services/admin-api/: Dockerfile  pyproject.toml
services/admin-api/tests/: test_containers.py  test_logs.py  test_stdb_proxy.py  test_system.py
services/deck/: Dockerfile  pyproject.toml
services/deck/tests/: test_agent.py  test_main.py  test_plan.py  test_render.py
tests/e2e-rust/: Cargo.toml
tests/e2e-rust/scripts/: start-spacetime.sh
tests/e2e-rust/src/: lib.rs
tests/e2e-rust/tests/: magic_link.rs  portfolio_with_data.rs
(+4522 files in other folders)
