[workspace]
resolver = "2"
# Add new crates to `members` as they are scaffolded — keeping non-existent
# paths here makes `cargo metadata` fail across the whole workspace.
members = [
    "modules/sastaspace",
    "modules/typewars",
    "crates/core",
    "crates/stdb-client",
    "crates/auth",
    "crates/app-portfolio",
    "crates/app-notes",
    "crates/app-deck",
    "crates/app-typewars",
    "crates/app-admin",
    "crates/shell",
    "tests/e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/themohitkhare/sastaspace"

[workspace.dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "time", "fs", "io-util", "sync"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
spacetimedb-sdk = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
keyring = "3"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
directories = "5"
futures = "0.3"
thiserror = "1"
insta = { version = "1.40", features = ["yaml"] }
expectrl = "0.7"

# Config for `cargo dist`.
# Produces binaries for macOS (universal), Linux (x86_64 + aarch64), Windows.
# Publishes to GitHub Releases + a Homebrew tap.
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["shell", "homebrew"]
tap = "themohitkhare/homebrew-sastaspace"
publish-jobs = ["homebrew"]
formula = "sastaspace"
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
publish-prereleases = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Wasm modules optimize for size, not speed.
[profile.release.package.sastaspace-module]
opt-level = "z"

[profile.release.package.typewars-module]
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
