[project]
name = "sastaspace"
version = "0.1.0"
description = "AI Website Redesigner — crawl any site, get a beautiful redesign in 60 seconds"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "fastapi>=0.135.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "motor>=3.3.0",
    "redis>=5.0.0",
    "agno>=2.5.10",
    "prometheus-client>=0.24.1",
    "tldextract>=5.3.1",
    "aiohttp>=3.9.0",
]

[project.scripts]
sastaspace = "sastaspace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-n auto"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mongomock-motor>=0.0.21",
    "pytest-xdist>=3.5.0",
]
