[project]
name = "sastaspace"
version = "0.1.0"
description = "AI Website Redesigner — crawl any site, get a beautiful redesign in 60 seconds"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "fastapi>=0.135.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "motor>=3.3.0",
    "redis>=5.0.0",
    "agno>=2.5.10",
    "prometheus-client>=0.24.1",
    "tldextract>=5.3.1",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "defusedxml>=0.7.1",
    "yara-python>=4.5.0",
    "pyclamd>=0.4.0",
    "aiohttp>=3.9.0",
    "nh3>=0.2.14",
    "httpx>=0.27.0",
    "google-genai>=1.68.0",
    "python-json-logger>=3.0.0",
]

[project.scripts]
sastaspace = "sastaspace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-n auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pycodegate]
vulture-whitelist = "vulture_whitelist.py"

[tool.pycodegate.ignore]
dirs = [".claude", "claude-code-api"]

[tool.pycodegate.per-file-suppress]
# Separate project, not part of sastaspace codebase
"claude-code-api/*" = ["dead-code"]
# Pydantic models — fields are false positives for dead-code (vulture can't track attribute access)
"sastaspace/agents/models.py" = ["dead-code"]
# FastAPI app factory and job handler are inherently complex pipeline functions
"sastaspace/server.py" = ["critical-complexity", "no-giant-module", "no-god-function", "no-broad-exception", "missing-response-model"]
"sastaspace/jobs.py" = ["critical-complexity", "no-giant-module", "no-god-function", "no-deep-nesting", "no-broad-exception"]
# Agent pipeline is a complex multi-step orchestrator by design
"sastaspace/agents/pipeline.py" = ["critical-complexity", "no-giant-module", "no-god-function", "high-complexity", "no-broad-exception"]
# Worker top-level crash handlers are intentionally broad
"sastaspace/worker.py" = ["no-broad-exception"]
# Database update_job uses **kwargs dispatch — inherently branchy
"sastaspace/database.py" = ["high-complexity"]
# Crawler is inherently complex HTML extraction logic
"sastaspace/crawler.py" = ["no-giant-module", "high-complexity", "no-god-function", "no-deep-nesting"]
# Redesigner routes to multiple strategies — orchestrator by design
"sastaspace/redesigner.py" = ["no-god-function"]
# CLI top-level error handlers are intentionally broad
"sastaspace/cli.py" = ["no-broad-exception"]
# Third-party API client — broad catch-all for resilience
"sastaspace/twenty_sync.py" = ["no-broad-exception"]
# Test files use hardcoded values and long setup functions intentionally
"tests/*" = ["no-hardcoded-secret", "no-giant-module", "no-god-function", "too-many-arguments", "dead-code", "http-no-status-check"]
# Asset downloader extracts URLs from multiple HTML element types — linear by design
"sastaspace/asset_downloader.py" = ["no-god-function"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mongomock-motor>=0.0.21",
    "pytest-xdist>=3.5.0",
]
