[project]
name = "sastaspace"
version = "0.1.0"
description = "AI Website Redesigner — crawl any site, get a beautiful redesign in 60 seconds"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "fastapi>=0.135.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "motor>=3.3.0",
    "redis>=5.0.0",
    "agno>=2.5.10",
    "prometheus-client>=0.24.1",
    "tldextract>=5.3.1",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "defusedxml>=0.7.1",
    "yara-python>=4.5.0",
    "pyclamd>=0.4.0",
    "aiohttp>=3.9.0",
    "nh3>=0.2.14",
    "httpx>=0.27.0",
    "google-genai>=1.68.0",
    "python-json-logger>=3.0.0",
]

[project.scripts]
sastaspace = "sastaspace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-n auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradual adoption
check_untyped_defs = true
ignore_missing_imports = true

[tool.pycodegate]
vulture-whitelist = "vulture_whitelist.py"

[tool.pycodegate.ignore]
dirs = [".claude", "claude-code-api"]
# All dependencies are real (installed via uv) — pycodegate can't resolve the venv
rules = ["hallucination/phantom-import"]

[tool.pycodegate.per-file-suppress]
# Separate project, not part of sastaspace codebase
"claude-code-api/*" = ["dead-code"]
# Pydantic models — fields are false positives for dead-code (vulture can't track attribute access)
"sastaspace/agents/models.py" = ["dead-code"]
# Twenty CRM Pydantic models + SSE event models — fields are false positives for dead-code
"sastaspace/twenty_models.py" = ["dead-code"]
# Dynamic attribute set on logging.LogRecord — false positive for dead-code
# JSON formatter import is conditional on LOG_FORMAT=json
"sastaspace/logging_setup.py" = ["dead-code", "no-import-in-function", "test-coverage/untested-function"]
# FastAPI app factory and job handler are inherently complex pipeline functions
# Middleware functions registered via @app.middleware("http") are false positives for dead-code
"sastaspace/server.py" = ["critical-complexity", "no-giant-module", "no-god-function", "no-broad-exception", "missing-response-model", "dead-code"]
"sastaspace/jobs.py" = ["critical-complexity", "no-giant-module", "no-god-function", "no-deep-nesting", "no-broad-exception"]
# Agent pipeline is a complex multi-step orchestrator by design
"sastaspace/agents/pipeline.py" = ["critical-complexity", "no-giant-module", "no-god-function", "high-complexity", "no-broad-exception", "no-import-in-function"]
# Worker top-level crash handlers are intentionally broad
# BaseHTTPRequestHandler overrides (do_GET, log_message) are false positives for dead-code
"sastaspace/worker.py" = ["no-broad-exception", "dead-code"]
# Database update_job uses **kwargs dispatch — inherently branchy
"sastaspace/database.py" = ["high-complexity", "test-coverage/untested-function"]
# Crawler is inherently complex HTML extraction logic
"sastaspace/crawler.py" = ["no-giant-module", "high-complexity", "no-god-function", "no-deep-nesting"]
# Redesigner routes to multiple strategies — orchestrator by design
# redesign() and redesign_premium() are intentionally parallel thin wrappers with different prompts
"sastaspace/redesigner.py" = ["no-god-function", "too-many-arguments", "drift/near-duplicate", "test-coverage/untested-function"]
# Route modules extracted from server.py — factory functions tested through integration tests
"sastaspace/routes/admin.py" = ["critical-complexity", "no-god-function", "test-coverage/untested-function"]
"sastaspace/routes/redesign.py" = ["high-complexity", "no-god-function", "too-many-arguments", "test-coverage/untested-function"]
"sastaspace/routes/sites.py" = ["no-god-function", "missing-response-model", "test-coverage/untested-function"]
# FastAPI route functions registered via decorator are false positives for dead-code
# MongoDB _client import must stay in function — needs runtime value, not import-time
"sastaspace/routes/health.py" = ["no-god-function", "no-broad-exception", "dead-code", "no-import-in-function", "test-coverage/untested-function"]
"sastaspace/routes/sse.py" = ["no-god-function", "no-broad-exception", "test-coverage/untested-function"]
# CircuitBreaker intentionally catches all exceptions to track failures
"sastaspace/circuit_breaker.py" = ["no-broad-exception"]
# Pydantic Settings — fields used via env vars, false positive for dead-code
"sastaspace/config.py" = ["dead-code"]
# Component selector constants used dynamically via dict lookup
"sastaspace/component_selector.py" = ["dead-code", "test-coverage/untested-function"]
# Asset validator — optional pyclamd dependency, guarded import; security scanning integration-tested
"sastaspace/asset_validator.py" = ["no-import-in-function", "test-coverage/untested-function"]
# Asset downloader helper functions used at runtime
"sastaspace/asset_downloader.py" = ["dead-code", "no-god-function"]
# CLI commands tested manually, not via unit tests
"sastaspace/cli.py" = ["no-broad-exception", "test-coverage/untested-function"]
# Third-party API client — broad catch-all for resilience
"sastaspace/twenty_sync.py" = ["no-broad-exception"]
# Admin functions tested indirectly through route/integration tests
"sastaspace/admin.py" = ["test-coverage/untested-function"]
# Deployer tested through server integration
"sastaspace/deployer.py" = ["test-coverage/untested-function"]
# HTML utils tested through redesign pipeline
"sastaspace/html_utils.py" = ["test-coverage/untested-function"]
# React builder requires Node.js — integration-tested
"sastaspace/react_builder.py" = ["test-coverage/untested-function"]
# URL helpers tested through server tests
"sastaspace/urls.py" = ["test-coverage/untested-function"]
# Test files use hardcoded values and long setup functions intentionally
# conftest fixtures are used by test discovery, not directly testable
"tests/*" = ["no-hardcoded-secret", "no-giant-module", "no-god-function", "too-many-arguments", "dead-code", "http-no-status-check", "test-coverage/untested-function"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mongomock-motor>=0.0.21",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "pip-audit>=2.7.0",
]
