[package]
name = "app-deck"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
sastaspace-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }
# rodio for optional audio playback — feature-gated so Linux CI without
# ALSA headers still compiles. The download-to-disk path is always enabled.
rodio = { version = "0.20", optional = true }

[features]
default = ["audio"]
audio = ["dep:rodio"]

[dev-dependencies]
insta = { workspace = true }
