[package]
name = "app-portfolio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
sastaspace-core = { package = "core", path = "../core" }
serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
