[package]
name = "app-typewars"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
sastaspace-core = { path = "../core" }
serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
