[package]
name = "auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
keyring = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sastaspace-core = { package = "core", path = "../core" }

[dev-dependencies]
wiremock = "0.6"
