[package]
name = "core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# Package name `core` shadows std::core in doctest harness; disable doctests.
doctest = false

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
