[package]
name = "sastaspace-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
