[package]
name = "shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sastaspace"
path = "src/main.rs"

[dependencies]
sastaspace-core = { path = "../core" }
stdb-client = { path = "../stdb-client" }
auth = { path = "../auth" }
app-portfolio = { path = "../app-portfolio" }
app-typewars = { path = "../app-typewars" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
