[package]
name = "stdb-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spacetimedb-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sastaspace-core = { package = "core", path = "../core" }
serde = { workspace = true }
