[package]
name = "sastaspace-module"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "2.1"
log = "0.4"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
