[package]
name = "sastaspace-module"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "2.1"
log = "0.4"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# [profile.release] intentionally omitted — per-package overrides for the wasm
# size profile live in the root workspace Cargo.toml under
# [profile.release.package.sastaspace-module] to avoid the "profiles for the
# non-root package will be ignored" warning.
