[package]
name = "typewars-module"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

# Wasm-only — exclude from cargo-dist native builds. See modules/sastaspace/Cargo.toml.
[package.metadata.dist]
dist = false

[dependencies]
spacetimedb = "2.1"
log = "0.4"

# [profile.release] intentionally omitted — see modules/sastaspace/Cargo.toml.
