[project]
name = "sastaspace-moderator"
version = "0.1.0"
description = "Comment moderator: Agno + Ollama llama-guard3:1b. Polls SpacetimeDB for pending comments and classifies them."
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.0,<3.0",
    # Agno's ollama submodule eagerly imports its openai shim, which requires
    # the openai package even when we're not talking to OpenAI. Cheap dep to
    # carry; we never call it.
    "openai>=1.50",
    "httpx>=0.28",
    "ollama>=0.5",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
